# obsidian-md-converter

./: .gitignore  README.md  pyproject.toml
src/obsidian_md_converter/: __init__.py  cli.py  converters.py  file_processor.py
tests/: __init__.py  test_cli.py  test_converters.py  test_file_processor.py
