[project]
name = "obsidian-md-converter"
version = "1.0.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sergii Prokofiev" }
]
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]

[project.scripts]
obsidian-md-converter = "obsidian_md_converter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/obsidian_md_converter"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["obsidian_md_converter"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
